--- a/demo_generator.ipynb
+++ b/demo_generator.ipynb
@@ -323,6 +323,238 @@
     }
    ],
    "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-16T01:17:14.016467Z",
+     "start_time": "2025-09-16T01:17:10.760838Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 重述用户消息\n",
+    "load_dotenv()\n",
+    "TONGYI_API_KEY = os.getenv(\"TONGYI_API_KEY\")\n",
+    "\n",
+    "# 将检索到的文档中的 page_content 取出组合到一起\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "# Prompt 模板\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=[\"context\", \"history\", \"query\"],\n",
+    "    template=\"\"\"\n",
+    "你是一个专业的中文问答助手，擅长基于提供的资料回答问题。\n",
+    "请仅根据以下背景资料以及历史消息回答问题，如无法找到答案，请直接回答“我不知道”。\n",
+    "\n",
+    "背景资料：{context}\n",
+    "\n",
+    "历史消息：[{history}]\n",
+    "\n",
+    "问题：{query}\n",
+    "\n",
+    "回答：\"\"\",\n",
+    ")\n",
+    "\n",
+    "# 大模型\n",
+    "llm = Tongyi(model=\"qwen-turbo\", api_key=TONGYI_API_KEY)\n",
+    "\n",
+    "# 历史消息\n",
+    "history = []\n",
+    "\n",
+    "# 格式化历史消息\n",
+    "def format_history(history):\n",
+    "    # 只保留最近 3 轮对话记录\n",
+    "    max_epoch = 3\n",
+    "    if len(history) > 2 * max_epoch:\n",
+    "        history = history[-2 * max_epoch :]\n",
+    "    return \"\\n\".join([f\"{i['role']}：{i['content']}\" for i in history])\n",
+    "\n",
+    "# rephrase Prompt 模板\n",
+    "rephrase_prompt = PromptTemplate(\n",
+    "    input_variables=[\"history\", \"query\"],\n",
+    "    template=\"\"\"\n",
+    "根据历史消息简要完善用户的问题，使其更加具体。只输出完善后的问题。\n",
+    "\n",
+    "历史消息：[{history}]\n",
+    "\n",
+    "问题：{query}\n",
+    "\"\"\",\n",
+    ")\n",
+    "\n",
+    "# 重述链条：根据历史和当前 query 生成更具体问题\n",
+    "rephrase_chain = (\n",
+    "    {\n",
+    "        \"history\": lambda x: format_history(x[\"history\"]),\n",
+    "        \"query\": lambda x: x[\"query\"],\n",
+    "    }\n",
+    "    | rephrase_prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    "    | (lambda x: print(f\"===== 重述后的查询: {x}=====\") or x)\n",
+    ")\n",
+    "\n",
+    "# Prompt 模板\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=[\"context\", \"history\", \"query\"],\n",
+    "    template=\"\"\"\n",
+    "你是一个专业的中文问答助手，擅长基于提供的资料回答问题。\n",
+    "请仅根据以下背景资料以及历史消息回答问题，如无法找到答案，请直接回答“我不知道”。\n",
+    "\n",
+    "背景资料：{context}\n",
+    "\n",
+    "历史消息：[{history}]\n",
+    "\n",
+    "问题：{query}\n",
+    "\n",
+    "回答：\"\"\",\n",
+    ")\n",
+    "\n",
+    "# RAG 链条\n",
+    "rag_chain = (\n",
+    "    {\n",
+    "        \"context\": lambda x: format_docs(\n",
+    "            retriever.invoke(\n",
+    "                rephrase_chain.invoke({\"history\": x[\"history\"], \"query\": x[\"query\"]})\n",
+    "                if x[\"history\"]\n",
+    "                else x[\"query\"],\n",
+    "                k=3,\n",
+    "            )\n",
+    "        ),\n",
+    "        \"history\": lambda x: format_history(x[\"history\"]),\n",
+    "        \"query\": lambda x: x[\"query\"],\n",
+    "    }\n",
+    "    | prompt\n",
+    "    | (lambda x: print(x.text, end=\"\") or x)\n",
+    "    | llm\n",
+    "    | StrOutputParser()  # 输出解析器，将输出解析为字符串\n",
+    ")\n",
+    "\n",
+    "query_list = [\"不动产或者动产被人占有怎么办\", \"那要是被损毁了呢\"]\n",
+    "for query in query_list:\n",
+    "    print(f\"===== 查询: {query} =====\")\n",
+    "    response = rag_chain.invoke({\"query\": query, \"history\": history})\n",
+    "    print(response, end=\"\\n\\n\")\n",
+    "    history.extend(\n",
+    "        [\n",
+    "            {\"role\": \"用户\", \"content\": query},\n",
+    "            {\"role\": \"助手\", \"content\": response},\n",
+    "        ]\n",
+    "    )\n"
+   ],
+   "id": "995341bf6a886739",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== 查询: 不动产或者动产被人占有怎么办 =====\n",
+      "\n",
+      "你是一个专业的中文问答助手，擅长基于提供的资料回答问题。\n",
+      "请仅根据以下背景资料以及历史消息回答问题，如无法找到答案，请直接回答“我不知道”。\n",
+      "\n",
+      "背景资料：第四百五十七条　留置权人对留置财产丧失占有或者留置权人接受债务人另行提供担保的，留置权消灭。\n",
+      "\n",
+      "第五分编　占有\n",
+      "\n",
+      "第二十章　占有\n",
+      "\n",
+      "第四百五十八条　基于合同关系等产生的占有，有关不动产或者动产的使用、收益、违约责任等，按照合同约定；合同没有约定或者约定不明确的，依照有关法律规定。\n",
+      "\n",
+      "第四百五十九条　占有人因使用占有的不动产或者动产，致使该不动产或者动产受到损害的，恶意占有人应当承担赔偿责任。\n",
+      "\n",
+      "第四百六十条　不动产或者动产被占有人占有的，权利人可以请求返还原物及其孳息；但是，应当支付善意占有人因维护该不动产或者动产支出的必要费用。\n",
+      "\n",
+      "第四百六十一条　占有的不动产或者动产毁损、灭失，该不动产或者动产的权利人请求赔偿的，占有人应当将因毁损、灭失取得的保险金、赔偿金或者补偿金等返还给权利人；权利人的损害未得到足够弥补的，恶意占有人还应当赔偿损失。\n",
+      "\n",
+      "第二百一十九条　利害关系人不得公开、非法使用权利人的不动产登记资料。\n",
+      "\n",
+      "第二百二十条　权利人、利害关系人认为不动产登记簿记载的事项错误的，可以申请更正登记。不动产登记簿记载的权利人书面同意更正或者有证据证明登记确有错误的，登记机构应当予以更正。\n",
+      "\n",
+      "不动产登记簿记载的权利人不同意更正的，利害关系人可以申请异议登记。登记机构予以异议登记，申请人自异议登记之日起十五日内不提起诉讼的，异议登记失效。异议登记不当，造成权利人损害的，权利人可以向申请人请求损害赔偿。\n",
+      "\n",
+      "第二百二十一条　当事人签订买卖房屋的协议或者签订其他不动产物权的协议，为保障将来实现物权，按照约定可以向登记机构申请预告登记。预告登记后，未经预告登记的权利人同意，处分该不动产的，不发生物权效力。\n",
+      "\n",
+      "预告登记后，债权消灭或者自能够进行不动产登记之日起九十日内未申请登记的，预告登记失效。\n",
+      "\n",
+      "第二百二十二条　当事人提供虚假材料申请登记，造成他人损害的，应当承担赔偿责任。\n",
+      "\n",
+      "因登记错误，造成他人损害的，登记机构应当承担赔偿责任。登记机构赔偿后，可以向造成登记错误的人追偿。\n",
+      "\n",
+      "第二百二十三条　不动产登记费按件收取，不得按照不动产的面积、体积或者价款的比例收取。\n",
+      "\n",
+      "第二节　动产交付\n",
+      "\n",
+      "第二百二十四条　动产物权的设立和转让，自交付时发生效力，但是法律另有规定的除外。\n",
+      "\n",
+      "第二百二十五条　船舶、航空器和机动车等的物权的设立、变更、转让和消灭，未经登记，不得对抗善意第三人。\n",
+      "\n",
+      "第二百二十六条　动产物权设立和转让前，权利人已经占有该动产的，物权自民事法律行为生效时发生效力。\n",
+      "\n",
+      "第二百二十七条　动产物权设立和转让前，第三人占有该动产的，负有交付义务的人可以通过转让请求第三人返还原物的权利代替交付。\n",
+      "\n",
+      "历史消息：[]\n",
+      "\n",
+      "问题：不动产或者动产被人占有怎么办\n",
+      "\n",
+      "回答：如果不动产或者动产被他人占有，权利人可以请求返还原物及其孳息。但是，应当支付善意占有人因维护该不动产或者动产支出的必要费用。\n",
+      "\n",
+      "===== 查询: 那要是被损毁了呢 =====\n",
+      "===== 重述后的查询: 那要是被损毁了，权利人可以请求赔偿损失吗？=====\n",
+      "\n",
+      "你是一个专业的中文问答助手，擅长基于提供的资料回答问题。\n",
+      "请仅根据以下背景资料以及历史消息回答问题，如无法找到答案，请直接回答“我不知道”。\n",
+      "\n",
+      "背景资料：第一千一百八十二条　侵害他人人身权益造成财产损失的，按照被侵权人因此受到的损失或者侵权人因此获得的利益赔偿；被侵权人因此受到的损失以及侵权人因此获得的利益难以确定，被侵权人和侵权人就赔偿数额协商不一致，向人民法院提起诉讼的，由人民法院根据实际情况确定赔偿数额。\n",
+      "\n",
+      "第一千一百八十三条　侵害自然人人身权益造成严重精神损害的，被侵权人有权请求精神损害赔偿。\n",
+      "\n",
+      "因故意或者重大过失侵害自然人具有人身意义的特定物造成严重精神损害的，被侵权人有权请求精神损害赔偿。\n",
+      "\n",
+      "第一千一百八十四条　侵害他人财产的，财产损失按照损失发生时的市场价格或者其他合理方式计算。\n",
+      "\n",
+      "第一千一百八十五条　故意侵害他人知识产权，情节严重的，被侵权人有权请求相应的惩罚性赔偿。\n",
+      "\n",
+      "第一千一百八十六条　受害人和行为人对损害的发生都没有过错的，依照法律的规定由双方分担损失。\n",
+      "\n",
+      "第一千一百七十四条　损害是因受害人故意造成的，行为人不承担责任。\n",
+      "\n",
+      "第一千一百七十五条　损害是因第三人造成的，第三人应当承担侵权责任。\n",
+      "\n",
+      "第一千一百七十六条　自愿参加具有一定风险的文体活动，因其他参加者的行为受到损害的，受害人不得请求其他参加者承担侵权责任；但是，其他参加者对损害的发生有故意或者重大过失的除外。\n",
+      "\n",
+      "活动组织者的责任适用本法第一千一百九十八条至第一千二百零一条的规定。\n",
+      "\n",
+      "第一千一百七十七条　合法权益受到侵害，情况紧迫且不能及时获得国家机关保护，不立即采取措施将使其合法权益受到难以弥补的损害的，受害人可以在保护自己合法权益的必要范围内采取扣留侵权人的财物等合理措施；但是，应当立即请求有关国家机关处理。\n",
+      "\n",
+      "受害人采取的措施不当造成他人损害的，应当承担侵权责任。\n",
+      "\n",
+      "第一千一百七十八条　本法和其他法律对不承担责任或者减轻责任的情形另有规定的，依照其规定。\n",
+      "\n",
+      "第二章　损害赔偿\n",
+      "\n",
+      "第二章　损害赔偿\n",
+      "\n",
+      "第一千一百七十九条　侵害他人造成人身损害的，应当赔偿医疗费、护理费、交通费、营养费、住院伙食补助费等为治疗和康复支出的合理费用，以及因误工减少的收入。造成残疾的，还应当赔偿辅助器具费和残疾赔偿金；造成死亡的，还应当赔偿丧葬费和死亡赔偿金。\n",
+      "\n",
+      "第一千一百八十条　因同一侵权行为造成多人死亡的，可以以相同数额确定死亡赔偿金。\n",
+      "\n",
+      "第一千一百八十一条　被侵权人死亡的，其近亲属有权请求侵权人承担侵权责任。被侵权人为组织，该组织分立、合并的，承继权利的组织有权请求侵权人承担侵权责任。\n",
+      "\n",
+      "被侵权人死亡的，支付被侵权人医疗费、丧葬费等合理费用的人有权请求侵权人赔偿费用，但是侵权人已经支付该费用的除外。\n",
+      "\n",
+      "历史消息：[用户：不动产或者动产被人占有怎么办\n",
+      "助手：如果不动产或者动产被他人占有，权利人可以请求返还原物及其孳息。但是，应当支付善意占有人因维护该不动产或者动产支出的必要费用。]\n",
+      "\n",
+      "问题：那要是被损毁了呢\n",
+      "\n",
+      "回答：如果不动产或者动产被损毁，权利人可以请求侵权人赔偿损失。根据相关法律规定，侵害他人财产的，财产损失按照损失发生时的市场价格或者其他合理方式计算。此外，如果侵权行为造成严重精神损害，被侵权人还有权请求精神损害赔偿。\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
